<resources>
    <string name="version" translatable="false">Pace One v1.7.1</string>
    <string name="copyright" translatable="false">Copyright © 2020 x5Bart</string>
    <string name="negative_and_positive_splits">Negative and positive splits</string>
    <string name="app_name" translatable="false">Pace One</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="mile_hour" translatable="false">mile/hour</string>
    <string name="min_km" translatable="false">min/km</string>
    <string name="min_mile" translatable="false">min/mile</string>
    <string name="pace" translatable="false">PACE</string>
    <string name="speed" translatable="false">SPEED</string>
    <string name="time" translatable="false">TIME</string>
    <string name="distance" translatable="false">DISTANCE</string>
    <string name="hh_mm_ss" translatable="false">hh:mm:ss</string>
    <string name="km" translatable="false">km</string>
    <string name="km_2" translatable="false">KM</string>
    <string name="mile" translatable="false">mile</string>
    <string name="mile_2" translatable="false">mile</string>
    <string name="mile_3" translatable="false">MILE</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="dialog" translatable="false">Calculate</string>
    <string name="distance2" translatable="false">DISTANCE</string>
    <string name="speedBtn" translatable="false">SPEED</string>
    <string name="timeBtn" translatable="false">TIME</string>
    <string name="distanceBtn" translatable="false">DISTANCE</string>
    <string name="about" translatable="false">About</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="segment" translatable="false">SPLIT</string>
    <string name="SPLIT">split</string>
    <string name="splitFactory" translatable="false">
        A negative split is a racing strategy that involves completing the second half of a race faster than the first half. It is defined by the intentional setting of a slower initial pace, followed by a gradual or sudden increase of speed towards the end of the race.
Conversely, the act of completing the first half of a race faster than the second half is known as a positive split.
The strategy of negative splitting has been documented in competitive running since the early 20th century. Runners such as Steve Prefontaine, Wilson Kipsang and Galen Rupp have used them in races.
    </string>
    <string name="back">Back</string>
    <string name="splitFactor">SPLIT STRATEGY</string>
    <string name="avg">AVG</string>
    <string name="_3_km">3 km</string>
    <string name="_5_km">5 km</string>
    <string name="_10_km">10 km</string>
    <string name="halfmarathon">halfmarathon</string>
    <string name="marathon">marathon</string>
    <string name="_3_km_mile">1.86 mile (3 km)</string>
    <string name="_5_km_mile">3.11 mile (5 km)</string>
    <string name="_10_km_mile">6.21 mile (10 km)</string>

    <string name="system">System</string>
    <string name="language">Language</string>
    <string name="distanceSetting">Distance</string>
    <string name="english" translatable="false">English</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="def">English</string>
    <string name="help_to_developer">Help to Developer</string>
    <string name="car_speed">CAR SPEED</string>
    <string name="save_calculate_text">Save calculations after quit</string>
    <string name="clear_data">clear data</string>
    <string name="height">HEIGHT</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="cm">cm</string>

    <string name="zone_title_1">Zone 1: Easy</string>
    <string name="zone_title_2">Zone 2: Moderate</string>
    <string name="zone_title_3">Zone 3: Hard</string>
    <string name="zone_title_4">Zone 4: Very hard</string>
    <string name="zone_title_5">Zone 5: Maximal</string>
    <string name="zone_1">Zone 1</string>
    <string name="zone_2">Zone 2</string>
    <string name="zone_3">Zone 3</string>
    <string name="zone_4">Zone 4</string>
    <string name="zone_5">Zone 5</string>
    <string name="zone_text_1">Exercising in zone 1 is relatively easy on your body. When it comes to fitness training, intensity this low is significant mainly in restorative training and improving your basic fitness when you are just beginning to exercise, or after a long break. Everyday exercise – walking, climbing stairs, cycling to work, etc. – is usually performed within this intensity zone.</string>
    <string name="zone_text_2">Exercising at zone 2 improves your basic fitness level effectively. Exercising at this intensity feels easy, but workouts with a long duration can have a very high training effect. The majority of cardiovascular conditioning training should be performed within this zone. Improving basic fitness builds a foundation for other exercise and prepares your system for more energetic activity. Long duration workouts at this zone consume a lot of energy, especially from your body’s stored fat.</string>
    <string name="zone_text_3">Exercising at zone 3 begins to be quite energetic and feels like pretty hard going. It will improve your ability to move quickly and economically. In this zone, lactic acid begins to form in your system, but your body is still able to completely flush it out. You should train at this intensity at most a couple of times per week, as it puts your body under a lot of stress.</string>
    <string name="zone_text_4">Exercising at zone 4 will prepare your system for competition type events and high speeds. Workouts in this zone can be performed either at constant speed or as interval training (combinations of shorter training phases with intermittent breaks). High-intensity training develops your fitness level quickly and effectively, but done too often or at too high intensity may lead to overtraining, which may force you to take a long break from your training program.</string>
    <string name="zone_text_5">When your heart rate during a workout reaches zone 5, the training will feel extremely hard. Lactic acid will build up in your system much faster than it can be removed, and you will be forced to stop after a few minutes at most. Athletes include these maximum-intensity workouts in their training program in a very controlled manner, fitness enthusiasts do not require them at all.</string>
    <string name="hearth_rate_zone">HEARTH RATE ZONE</string>
    <string name="max_heart_rate">MAX HEART RATE</string>
    <string name="stride_length">STRIDE LENGTH</string>
    <string name="copyrate_suunto_com">source suunto.com</string>
    <string name="null_my">""</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="world_run" translatable="false">WORLD RUN</string>
    <string name="person" translatable="false">PERSON</string>
    <string name="pace_title" translatable="false">PACE</string>
    <string name="split" translatable="false">SPLIT</string>
    <string name="settings_tittle">SETTINGS</string>


    !-- TODO: Remove or change this placeholder text -->


</resources>
