<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_rounded"
    tools:context=".PersonFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/person_guideline_vert50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <View
        android:id="@+id/person_divider_1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <!--Person-->

    <TextView
        android:id="@+id/person_tv_titleHeight"
        style="@style/FontTitle"
        android:layout_marginTop="8dp"
        android:text="@string/height"
        app:layout_constraintEnd_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_1" />

    <TextView
        android:id="@+id/person_et_height"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:theme="@style/EditTextFontSmall"
        app:layout_constraintEnd_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_tv_titleHeight" />

    <TextView
        android:id="@+id/person_tv_signHeight"
        style="@style/FontSmall"
        android:text="@string/cm"
        app:layout_constraintEnd_toEndOf="@+id/person_et_height"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/person_et_height"
        app:layout_constraintTop_toBottomOf="@+id/person_et_height" />

    <!--Birthday-->

    <TextView
        android:id="@+id/person_tv_titleBirthday"
        style="@style/FontTitle"
        android:text="@string/birthday"
        app:layout_constraintBottom_toTopOf="@+id/person_et_birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/person_guideline_vert50" />

    <TextView
        android:id="@+id/person_et_birthday"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:inputType="none"
        android:theme="@style/EditTextFontSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintTop_toBottomOf="@+id/person_tv_titleHeight" />

    <View
        android:id="@+id/person_divider_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="125dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_1" />

    <!--heart rate-->

    <TextView
        android:id="@+id/person_tv_titleZoneHeartRate"
        style="@style/FontTitle"
        android:layout_marginTop="8dp"
        android:text="@string/hearth_rate_zone"
        app:layout_constraintEnd_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_2" />

    <Button
        android:id="@+id/person_btn_zone5"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:background="@drawable/bg_harth_rate"
        android:gravity="center"
        android:text="@string/zone_5"
        android:textColor="#B71C1C"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/person_btn_zone4"
        app:layout_constraintEnd_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_tv_titleZoneHeartRate" />

    <Button
        android:id="@+id/person_btn_zone4"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:background="@drawable/bg_harth_rate"
        android:gravity="center"
        android:text="@string/zone_4"
        android:textColor="#FF6F00"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/person_btn_zone3"
        app:layout_constraintStart_toStartOf="@+id/person_btn_zone5"
        app:layout_constraintTop_toBottomOf="@+id/person_btn_zone5" />

    <Button
        android:id="@+id/person_btn_zone3"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:background="@drawable/bg_harth_rate"
        android:gravity="center"
        android:text="@string/zone_3"
        android:textColor="#FFA000"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/person_btn_zone2"
        app:layout_constraintStart_toStartOf="@+id/person_btn_zone4"
        app:layout_constraintTop_toBottomOf="@+id/person_btn_zone4" />

    <Button
        android:id="@+id/person_btn_zone2"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:background="@drawable/bg_harth_rate"
        android:gravity="center"
        android:text="@string/zone_2"
        android:textColor="#7CB342"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/person_btn_zone1"
        app:layout_constraintStart_toStartOf="@+id/person_btn_zone3"
        app:layout_constraintTop_toBottomOf="@+id/person_btn_zone3" />

    <Button
        android:id="@+id/person_btn_zone1"
        android:layout_width="80dp"
        android:layout_height="17dp"
        android:background="@drawable/bg_harth_rate"
        android:gravity="center"
        android:text="@string/zone_1"
        android:textColor="#5C6BC0"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/person_divider_3"
        app:layout_constraintStart_toStartOf="@+id/person_btn_zone2"
        app:layout_constraintTop_toBottomOf="@+id/person_btn_zone2" />



<!--MaxHR-->

    <TextView
        android:id="@+id/person_tv_titleMaxHR"
        style="@style/FontTitle"
        android:text="@string/max_heart_rate"
        app:layout_constraintBottom_toTopOf="@+id/person_et_maxHR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/person_guideline_vert50" />

    <TextView
        android:id="@+id/person_et_maxHR"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:inputType="none"
        android:theme="@style/EditTextFontSmall"
        app:layout_constraintBottom_toTopOf="@+id/person_divider_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_2" />

    <View
        android:id="@+id/person_divider_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="125dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_2"
        tools:layout_editor_absoluteX="0dp" />



    <!--StrideLength-->
    <TextView
        android:id="@+id/person_tv_titleStrideLength"
        style="@style/FontTitle"
        android:text="@string/stride_length"
        app:layout_constraintBottom_toTopOf="@+id/person_et_StrideLength"
        app:layout_constraintEnd_toEndOf="@+id/person_et_StrideLength"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/person_et_StrideLength" />

    <TextView
        android:id="@+id/person_et_StrideLength"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:inputType="none"
        android:theme="@style/EditTextFontSmall"
        app:layout_constraintBottom_toTopOf="@+id/person_divider_4"
        app:layout_constraintEnd_toStartOf="@+id/person_guideline_vert50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_3" />

    <TextView
        android:id="@+id/person_tv_singStrideLength"
        style="@style/FontSmall"
        android:text="@string/cm"
        app:layout_constraintEnd_toEndOf="@+id/person_et_StrideLength"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/person_et_StrideLength"
        app:layout_constraintTop_toBottomOf="@+id/person_et_StrideLength" />


    <View
        android:id="@+id/person_divider_4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="125dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/person_divider_3"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/person_divirer_4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="50dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/person_divider_5"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/person_divider_5"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <com.yandex.mobile.ads.AdView
        android:id="@+id/person_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/person_divider_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>