<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_rounded"
    tools:context=".SettingsFragment">


    <TextView
        android:id="@+id/tvSave"
        style="@style/FontTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_calculate_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/divider11"
        app:layout_constraintStart_toStartOf="@+id/tvSystem" />

    <View
        android:id="@+id/divider11"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/divider9"
        tools:layout_editor_absoluteX="1dp" />


    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/tvSystem"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider9"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@+id/divider8"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/tvSystem"
        style="@style/EditTextFontSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/system"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLanguage"
        style="@style/FontTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintStart_toStartOf="@+id/tvSystem"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <TextView
        android:id="@+id/tvLanguage2"
        style="@style/FontTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/def"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvLanguage"
        app:layout_constraintEnd_toStartOf="@+id/ivLanguage" />

    <ImageView
        android:id="@+id/ivLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@android:drawable/arrow_down_float"
        app:layout_constraintBottom_toTopOf="@+id/divider9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider8" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toTopOf="@+id/divider11"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHelp"
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/help_to_developer"
        app:layout_constraintBottom_toTopOf="@+id/btnClearData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11" />

    <Button
        android:id="@+id/btnClearData"
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/clear_data"
        app:layout_constraintBottom_toTopOf="@+id/btnAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHelp" />

    <Button
        android:id="@+id/btnAbout"
        style="@style/MyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:background="@drawable/btn_rounded_corner"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClearData" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="50dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintStart_toStartOf="parent" />

    <com.yandex.mobile.ads.AdView
        android:id="@+id/banner_view_wings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/divider3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>