<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:padding="30dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:background="@drawable/fragment_rounded"
            android:orientation="vertical">


            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/audiowide"
                        android:text="@string/negative_and_positive_splits"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/splitFactory" />

                    <Button
                        android:id="@+id/btnBack"
                        style="@android:style/Widget.Material.Light.Button.Small"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/btn_rounded_corner"
                        android:text="@string/back"
                        android:theme="@style/MyButton"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>